@@ -9,6 +9,10 @@ import io.mazewall.enforcer.*
 import io.mazewall.LinuxNative
 import io.mazewall.NativeEngine
 import io.mazewall.seccomp.SeccompInstallationState
+import io.mazewall.core.JavaAgentSelection
+import io.mazewall.core.JvmChildProcess
+import io.mazewall.core.JvmChildSpec
+import io.mazewall.core.PrivateUnixEndpoint
 import io.mazewall.core.ProcessLauncher
 import io.mazewall.core.RealProcessLauncher
 import io.mazewall.core.RealSocketManager
@@ -18,7 +22,6 @@ import io.mazewall.ffi.memory.writeByte
 import io.mazewall.getFdOrThrow
 import java.io.IOException
 import java.nio.file.Path
-import java.nio.file.attribute.PosixFilePermissions
 import java.util.logging.Logger
 
 /**
@@ -44,9 +47,21 @@ public class SupervisorDaemonManager(
     private var sharedDaemonContext: SupervisorContext? = null
 
     // Visible for testing: allows test suites to intercept unexpected exit without terminating the JVM
-    internal var onUnexpectedExit: (exitCode: Int) -> Unit = {
+    internal var onUnexpectedExit: (exitCode: Int) -> Unit = { exitCode ->
+        // Observability before the fail-closed halt (issue-20260823-172005). The halt itself is
+        // non-negotiable: stranded USER_NOTIF waiters cannot be resumed.
+        io.mazewall.enforcer.diagnostics.MazewallEvents.emit(
+            io.mazewall.enforcer.diagnostics.MazewallEvents.DaemonExited(
+                pid = daemonProcessPid(),
+                exitCode = exitCode,
+                lastLogLines = daemonLogLines.toList(),
+            ),
+        )
         Runtime.getRuntime().halt(1)
     }
+
+    private fun daemonProcessPid(): Long =
+        synchronized(daemonLock) { sharedDaemonContext?.daemonProcess?.pid() ?: -1L }
 
     public companion object {
         private const val SHUTDOWN_COMMAND_BYTE = 0x53.toByte() // 'S'
@@ -98,7 +113,7 @@ public class SupervisorDaemonManager(
         } catch (e: SecurityException) {
             logger.log(java.util.logging.Level.WARNING, "Failed to remove shutdown hook", e)
         }
-        triggerDaemonShutdown(context.socketPath)
+        triggerDaemonShutdown(context.socketPath, context.daemonProcess)
         context.daemonProcess.destroyForcibly()
         try {
             processLauncher.deleteIfExists(context.socketDir.resolve("supervisor.sock"))
@@ -131,48 +146,22 @@ public class SupervisorDaemonManager(
 
     private fun spawnDaemon(): SupervisorContext {
         refuseSpawnIfParentIsFiltered()
-        val daemonClassName = SupervisorDaemon::class.java.name
+        val endpoint =
+            PrivateUnixEndpoint.create(processLauncher, "mazewall-supervisor-", "supervisor.sock")
+        val socketDir = endpoint.dir
+        val socketPath = endpoint.path
 
-        val perms = PosixFilePermissions.fromString("rwx------")
-        var socketDir = processLauncher.createTempDirectory("mazewall-supervisor-", PosixFilePermissions.asFileAttribute(perms))
-        var socketPath = socketDir.resolve("supervisor.sock").toAbsolutePath().toString()
-
-        if (socketPath.toByteArray(java.nio.charset.StandardCharsets.UTF_8).size >= 108) {
-            try {
-                processLauncher.deleteIfExists(socketDir.resolve("supervisor.sock"))
-                processLauncher.deleteIfExists(socketDir)
-            } catch (ignored: Exception) {}
-
-            val tmpDir = java.nio.file.Path.of("/tmp")
-            socketDir = processLauncher.createTempDirectory(tmpDir, "mazewall-supervisor-", PosixFilePermissions.asFileAttribute(perms))
-            socketPath = socketDir.resolve("supervisor.sock").toAbsolutePath().toString()
-
-            require(socketPath.toByteArray(java.nio.charset.StandardCharsets.UTF_8).size < 108) {
-                "Failed to generate a safe UNIX socket path (exceeds 107 bytes): $socketPath"
-            }
-        }
-
-        val javaBin = System.getProperty("java.home") + "/bin/java"
-        val classpath = System.getProperty("java.class.path")
-
-        val jvmArgs = java.lang.management.ManagementFactory
-            .getRuntimeMXBean()
-            .inputArguments
-        val javaAgents = jvmArgs.filter { it.startsWith("-javaagent:") }
-
-        val pbArgs = mutableListOf<String>()
-        pbArgs.add(javaBin)
-        pbArgs.add("--enable-native-access=ALL-UNNAMED")
-        pbArgs.add("-Xmx64m")
-        pbArgs.addAll(javaAgents)
-        pbArgs.add("-cp")
-        pbArgs.add(classpath)
-        pbArgs.add(daemonClassName)
-        pbArgs.add(socketPath)
-
+        val spec =
+            JvmChildSpec(
+                mainClass = SupervisorDaemon::class.java.name,
+                mainArgs = listOf(socketPath),
+                maxHeap = "64m",
+                javaAgents = JavaAgentSelection.All,
+            )
+        val pbArgs = JvmChildProcess.commandLine(spec)
         logger.info("Spawning SupervisorDaemon: ${pbArgs.joinToString(" ")}")
 
-        val daemonProcess = processLauncher.startProcess(pbArgs)
+        val daemonProcess = JvmChildProcess.start(processLauncher, spec)
         val daemonPid = daemonProcess.pid()
 
         val prctlRes = engine.process.prctl(
@@ -195,47 +184,39 @@ public class SupervisorDaemonManager(
         val context = SupervisorContext(socketPath, socketDir, daemonProcess, shutdownHook)
         sharedDaemonContext = context
 
-        val readyLatch = java.util.concurrent.CountDownLatch(1)
-
-        Thread {
-            try {
-                val reader = daemonProcess.inputStream.bufferedReader()
-                while (true) {
-                    val line = reader.readLine() ?: break
-                    if (line.contains(SupervisorDaemon.DAEMON_READY_SENTINEL)) {
-                        readyLatch.countDown()
-                    }
+        val pump =
+            JvmChildProcess.startStdoutPump(
+                process = daemonProcess,
+                readySentinel = SupervisorDaemon.DAEMON_READY_SENTINEL,
+                onLine = { line ->
                     daemonLogLines.add(line)
                     System.err.println("[SUPERVISOR-DAEMON] $line")
                     System.err.flush()
-                }
-            } catch (ignored: IOException) {
-                // Stopped
-            } catch (t: Throwable) {
-                logger.log(java.util.logging.Level.SEVERE, "Exception inside supervisor-daemon-output thread", t)
-            } finally {
-                synchronized(daemonLock) {
-                    val currentContext = sharedDaemonContext
-                    if (currentContext != null && currentContext.daemonProcess == daemonProcess) {
-                        if (!daemonProcess.isAlive) {
-                            val exitCode = try { daemonProcess.exitValue() } catch (e: Exception) { -1 }
-                            logger.severe("SupervisorDaemon (PID=${daemonProcess.pid()}) exited unexpectedly with exit code $exitCode!")
-                            logger.severe("Last daemon log lines:")
-                            daemonLogLines.forEach { line ->
-                                logger.severe("[SUPERVISOR-DAEMON-CRASH-LOG] $line")
+                },
+                threadName = "supervisor-daemon-output",
+                onStreamClosed = {
+                    synchronized(daemonLock) {
+                        val currentContext = sharedDaemonContext
+                        if (currentContext != null && currentContext.daemonProcess == daemonProcess) {
+                            if (!daemonProcess.isAlive) {
+                                val exitCode = try {
+                                    daemonProcess.exitValue()
+                                } catch (_: Exception) {
+                                    -1
+                                }
+                                logger.severe("SupervisorDaemon (PID=${daemonProcess.pid()}) exited unexpectedly with exit code $exitCode!")
+                                logger.severe("Last daemon log lines:")
+                                daemonLogLines.forEach { line ->
+                                    logger.severe("[SUPERVISOR-DAEMON-CRASH-LOG] $line")
+                                }
+                                onUnexpectedExit(exitCode)
                             }
-                            onUnexpectedExit(exitCode)
                         }
                     }
-                }
-            }
-        }.apply {
-            isDaemon = true
-            name = "supervisor-daemon-output"
-        }.start()
+                },
+            )
 
-        // Wait for sentinel
-        val ready = readyLatch.await(LATCH_TIMEOUT_SECONDS, java.util.concurrent.TimeUnit.SECONDS)
+        val ready = JvmChildProcess.awaitReady(pump, LATCH_TIMEOUT_SECONDS)
 
         if (!ready) {
             val alive = daemonProcess.isAlive
@@ -250,32 +231,42 @@ public class SupervisorDaemonManager(
         return context
     }
 
-    private fun triggerDaemonShutdown(socketPath: String) {
+    /**
+     * Best-effort graceful shutdown: send the shutdown command, then wait (bounded) for the daemon
+     * to observe it and exit on its own before the caller escalates to destroyForcibly
+     * (issue-20260823-172000). Sleep-based waiting is replaced by a liveness poll so shutdown
+     * success is observable and fast daemons are not delayed by a fixed 100ms.
+     */
+    private fun triggerDaemonShutdown(socketPath: String, process: Process) {
         try {
             io.mazewall.ffi.memory.NativeArena.ofConfined().use { arena ->
                 val fd = socketManager.connect(socketPath)
                 try {
                     val cmd = arena.allocate(1L)
                     cmd.writeByte(0L, SHUTDOWN_COMMAND_BYTE)
-                    var writeRes: io.mazewall.LinuxNative.SyscallResult<Long, *>
                     while (true) {
-                        writeRes = engine.memory.write(fd, cmd, 1)
+                        val writeRes = engine.memory.write(fd, cmd, 1)
                         if (writeRes is io.mazewall.LinuxNative.SyscallResult.Error && writeRes.errno == io.mazewall.ffi.NativeConstants.EINTR) {
                             continue
                         }
                         break
                     }
-                    try {
-                        Thread.sleep(SHUTDOWN_WAIT_MS)
-                    } catch (e: InterruptedException) {
-                        Thread.currentThread().interrupt()
-                    }
                 } finally {
                     socketManager.close(fd)
                 }
             }
-        } catch (ignored: Exception) {
-            // Ignore
+        } catch (e: Exception) {
+            logger.log(java.util.logging.Level.FINE, "Daemon shutdown command could not be delivered", e)
+            return // destroyForcibly() by the caller is the authoritative escalation.
+        }
+        // Bounded liveness poll: exit as soon as the daemon acknowledges by dying.
+        val deadline = System.currentTimeMillis() + SHUTDOWN_WAIT_MS
+        try {
+            while (process.isAlive && System.currentTimeMillis() < deadline) {
+                Thread.sleep(10)
+            }
+        } catch (e: InterruptedException) {
+            Thread.currentThread().interrupt()
         }
     }
 }
